# cyclegg

./: .gitattributes  .gitignore  Cargo.toml  README.md  wrong-props.md
cvc4-comparison/: README.md  cvc4-results.csv  run-benchmarks.py
cvc4-comparison/custom/: addAccum.smt2  addCommute.smt2  goal29NoNativeEq.smt2  goal77NoNativeEq.smt2  mapE.smt2  subHead.smt2
docs/: uncycling.tex
examples/: add.ceg  butlast-test.ceg  cycleq.ceg  differing-examples.ceg  failing_examples.ceg  isaplanner.ceg  lists.ceg  mts.ceg  mts.hs  mutual.ceg  nats.ceg  new-proofs-uncycled.ceg  prop66-test.ceg  prop_78.ceg  rev1-count.ceg  test.ceg  trees.ceg  weird-concat.ceg
liquidhaskell-proofs/: README.md  liquidhaskell-proofs.cabal  package.yaml  stack.yaml
liquidhaskell-proofs/src/: Prop01NoCyclic.hs  Prop02NoCyclic.hs  Prop03NoCyclic.hs  Prop04NoCyclic.hs  Prop06NoCyclic.hs  Prop07NoCyclic.hs  Prop08NoCyclic.hs  Prop09NoCyclic.hs  Prop10NoCyclic.hs  Prop11NoCyclic.hs  Prop12NoCyclic.hs  Prop13NoCyclic.hs  Prop14NoCyclic.hs  Prop15NoCyclic.hs  Prop17NoCyclic.hs  Prop18NoCyclic.hs  Prop19NoCyclic.hs  Prop21NoCyclic.hs  Prop22NoCyclic.hs  Prop23NoCyclic.hs  Prop24NoCyclic.hs  Prop25NoCyclic.hs  Prop28NoCyclic.hs  Prop29NoCyclic.hs  Prop31NoCyclic.hs  Prop32NoCyclic.hs  Prop33NoCyclic.hs  Prop34NoCyclic.hs  Prop35NoCyclic.hs  Prop36NoCyclic.hs  Prop37NoCyclic.hs  Prop38NoCyclic.hs  Prop39NoCyclic.hs  Prop40NoCyclic.hs  Prop41NoCyclic.hs  Prop42NoCyclic.hs  Prop43NoCyclic.hs  Prop44NoCyclic.hs  (+25 more)
src/: ast.rs  config.rs  egraph.rs  explain.rs  goal.rs  main.rs  parser.rs  types.rs  utils.rs
